Updated css .bottom-circle styling to prevent overlap

--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -353,5 +353,5 @@ span.bottom-cricle {
   right: 0;
   bottom: 0;
   transform: translate(20%, 40%);
-  z-index: -1;
+  z-index: -2;
 }
